fix: remove padding on mobile view

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -13,7 +13,10 @@
   &__logo {
     flex-shrink: 3;
     @include flex(row, center, center, nowrap);
-    padding-bottom: 47px;
+    @include media-tablet {
+      padding-bottom: 47px;
+    }
+
   }
 
 
